<resources>
    <string name="app_name">WISP</string>
    <string name="app_acronym">Weather Inspired Social-Media Platform</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_email">Email Address</string>
    <string name="prompt_enter_email">Enter a Email Address</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_enter_password">Enter a Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_enter_display_name">Enter a Display Name</string>
    <string name="login">Login</string>
    <string name="prompt_forgot_password">Forgot Password?</string>
    <string name="prompt_register">Register New User</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="settings">Setting</string>
    <string name="home">Home</string>
    <string name="weather">Weather</string>
    <string name="chat">Chat</string>
    <string name="contacts">Contacts</string>
    <string name="chat_room_message">Type message here</string>
    <string name="hello_blank_fragment">"Hello World!"</string>
    <string name="prompt_email_pass">Send email to reset your password.</string>
    <string name="prompt_change_pass">Change your password.</string>

    <string name="switch_sign_in">Stay Signed in</string>
    <string name="keys_shared_prefs">My Auth App Shared Prefs</string>
    <string name="keys_prefs_jwt">Shared Prefs JWT</string>

    <!-- Current Weather -->
    <string name="currentCity">Tacoma</string>
    <string name="currentTemp">42</string>
    <string name="currentWeather">Drizzle</string>
    <string name="currentHL">L:37   H:45</string>

    <!-- Chats -->
    <string name="create_chat_room">Create Chat Room</string>
    <string name="enter_chat_room_name">Enter Chat Room Name Here</string>
    <string name="create_room">Create</string>
    <string name="cancel">Cancel</string>
    <string name="title_add_member">Add Member</string>
    <string name="enter_member_email">Enter Member\'s Email</string>
    <string name="add_member">Add</string>
    <string name="remove_member">Remove</string>
    <string name="ok">OK</string>

    <!--TODO: added for landing, weather, & contacts -->
    <string name="title_landing">Landing</string>
    <string name="title_weather">Weather</string>
    <string name="title_contacts_init">Contacts</string>
    <string name="title_contacts_profile">Profile</string>
    <string name="title_chat_init">Chat</string>
    <string name="title_chat_room">Chat Room</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_search">Search</string>
    <string name="title_search_contacts">Search for a User</string>

    <!-- Web Service URL -->
    <string name="base_url">https://tcss450-2022au-group4.herokuapp.com/</string>

    <!-- SETTINGS (toolbar.xml): -->

    <!-- Select themes: -->
    <string name="settings_themes">Theme Colors</string>

    <string name="theme_summer">Summer Theme </string>
    <string name="theme_fall">Fall Theme</string>
    <string name="theme_winter">Winter Theme</string>
    <string name="theme_spring">Spring Theme</string>
    <string name="theme_uw">UW Theme</string>

    <string-array name="themes">
        <item>Summer</item>
        <item>Fall</item>
        <item>Winter</item>
        <item>Spring</item>
        <item>UW</item>
    </string-array>

    <!-- log out of account: -->
    <string name="settings_logoff">Log Out</string>
    <string name="settings_change_password">Change Password</string>
</resources>