<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    android:label="@string/title_landing"
    app:startDestination="@id/landing">

    <fragment
        android:id="@+id/chat"
        android:name="edu.uw.tcss450lucasd12.team_4_tcss450.Views.chat.ChatList.ChatListFragment"
        android:label="@string/title_chat_init"
        tools:layout="@layout/fragment_chat_list" >
    </fragment>

    <fragment
        android:id="@+id/weather"
        android:name="edu.uw.tcss450lucasd12.team_4_tcss450.Views.weather.WeatherFragment"
        android:label="@string/title_weather"
        tools:layout="@layout/fragment_weather" >
    </fragment>

    <fragment
        android:id="@+id/landing"
        android:name="edu.uw.tcss450lucasd12.team_4_tcss450.Views.landing.LandingFragment"
        android:label="@string/title_landing"
        tools:layout="@layout/fragment_landing" >
    </fragment>

    <fragment
        android:id="@+id/search"
        android:name="edu.uw.tcss450lucasd12.team_4_tcss450.Views.contacts.ContactsListFragment"
        android:label="@string/title_contacts_init"
        tools:layout="@layout/fragment_contacts_list">
    </fragment>
</navigation>