<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.auth.forgotpassword.ForgotPasswordFragment">

    <TextView
        android:id="@+id/appBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/status_bar"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="60sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bannerDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_acronym"
        android:textAlignment="center"
        android:textColor="@color/prompt_color"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBanner" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="16dp"
        android:autofillHints=""
        android:hint="@string/prompt_enter_email"
        android:inputType="text|textEmailAddress|textEmailSubject"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bannerDescription" />

    <Button
        android:id="@+id/buttonForgotPassword"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:layout_marginStart="16sp"
        android:text="@string/prompt_email_pass"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editEmail" />


</androidx.constraintlayout.widget.ConstraintLayout>